k8s/cluster-ip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tu2k22
  name: zhiyuan-clusterip
  labels:
    app: zhiyuan-clusterip
spec:
  type: ClusterIP
  selector:
    app: zhiyuan-django
  ports:
    - name: zhiyuan-clusterip
      protocol: TCP
      port: 8000
      targetPort: 8000
