k8s/django-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tu2k22
  name: zhiyuan-django
  labels:
    app: zhiyuan-django
spec:
  type: ClusterIP
  selector:
    app: zhiyuan-django
  ports:
    - port: 8000
      targetPort: 8000
