k8s/load_balancer.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tu2k22
  name: zhiyuan-django-alb
spec:
  selector:
    app: zhiyuan-app
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer
