k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tu2k22
  name: zhiyuan-nodeport
spec:
  type: NodePort 
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: zhiyuan-django
